# kyss

./: README.md  generated-crosswords.txt
bash_scripts/: deploy.sh
crossable/: Dockerfile.backend  Dockerfile.frontend  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
crossable/.turbo/cache/: 19294485b831055d-meta.json  260a6a63e02296a7-meta.json  3d243d670418506e-meta.json  3d243d670418506e.tar.zst  577b894c78cd8a59-meta.json  730dced7fad98fe7-meta.json  730dced7fad98fe7.tar.zst  (+7 more)
js_scripts/: nyt_scraper.js  package-lock.json  package.json
js_scripts/xword_info_scraper/: index.js
nx/: .gitignore  Dockerfile  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json
nyt_xwords/: 2018_03_09.csv
python-scripts/: nyt-json-to-csv.py
python_scripts/: nyt-json-to-csv.py
xwords-generator/: Cargo.toml
xwords_data/: 2017.csv
xwords_generator/: Cargo.toml  README.MD  temp.txt  xword_patterns.rs
xwords_generator/generated_xWords/: 05md7g4t.json  09oW.json  0DE0dTLC.json  0Fm7.json  0Fyb.json  0Jrp.json  0Ojx9GDn.json  0QhU.json  0RJV.json  0WJ8.json  0a0sYHiT.json  0dZe.json  0iRB322f.json  0jqn.json  0jzA.json  0meH.json  0nwN.json  0oRK.json  0pY5.json  0rEO.json  0u3s.json  0ubK.json  0vHJmtAh.json  0wns.json  11ao.json  13ri.json  18N5.json  1BMx.json  1Fko.json  1GMS.json  1Id8.json  1KuG.json  1LKv.json  1NSO.json  1PNZ.json  1PW8.json  1Qyp4D0D.json  1TPWWV8J.json  1W5h.json  1YMi.json  (+1674 more)
xwords_generator/generated_xwords/: 8t9V.json  pSxH.json  vWgQ.json
xwords_generator/src/: main.rs
(+8024 files in other folders)
