[package]
name = "xWord-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
csv = "1.1.6"
rand = "0.8.5"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87" 
trie-rs = "0.1.1"

[profile.release]
lto = true
# codegen-units = 1
